Added functionalities to load the dynamic grid

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Plandata_connect": "Server=HpasDtlSql16-1\\sql2022;Database=Plandata_connect;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
