--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "Plandata_connect": "Server=HpasDtlSql16-1\\sql2022;Database=Plandata_connect;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+    "MSSQL_ConnString": "Server=HpasDtlSql16-1\\sql2022;Database=Plandata_connect;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+    "PostgreSQL_ConnString": "Host=localhost;Database=HPA_Reference;Username=postgres;Password=password;"
+  },
+  "Ollama": {
+    "NlToQueryApiUrl": "http://10.143.60.81:11434/api/chat"
   },
   "Logging": {
     "LogLevel": {
