--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "MSSQL_ConnString": "Server=HpasDtlSql16-1\\sql2022;Database=Plandata_connect;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;",
-    "PostgreSQL_ConnString": "Host=localhost;Database=HPA_Reference;Username=postgres;Password=password;"
+    "PostgreSQL_ConnString": "Host=10.143.62.231:5432;Database=HPA_Reference;Username=postgres;Password=password;"
   },
   "Ollama": {
     "NlToQueryApiUrl": "http://10.143.60.81:11434/api/chat"
