Added Configuration and export changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,9 @@
     "Provider_ConnString": "Host=10.143.62.231:5432;Database=HPA_Reference;Username=postgres;Password=password;"
   },
   "Ollama": {
-    "NlToQueryApiUrl": "http://10.143.60.81:11434/api/chat"
+    "NlToQueryApiUrl": "http://10.143.60.81:11434/api/chat" /*Ajith server -llama3.2*/
+    /*"NlToQueryApiUrl": "http://10.143.62.240:11434/api/chat" // Rajesh server - mistral*/
+    //"NlToQueryApiUrl": "http://10.143.62.231:11434/api/chat" // My server - gemma3
   },
   "Logging": {
     "LogLevel": {
