Changing Product name and History Validation

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "Claims_ConnString": "Server=HpasDtlSql16-1\\sql2022;Database=Plandata_connect;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;",
-    "Provider_ConnString": "Host=10.143.62.231:5432;Database=HPA_Reference;Username=postgres;Password=password;"
+    "Claims Administrator_ConnString": "Server=HpasDtlSql16-1\\sql2022;Database=Plandata_connect;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true;",
+    "Provider Enrollment_ConnString": "Host=10.143.62.231:5432;Database=HPA_Reference;Username=postgres;Password=password;"
   },
   "Ollama": {
     "NlToQueryApiUrl": "http://10.143.60.81:11434/api/chat" /*Ajith server -llama3.2*/
